# Useful-computer-vision-code

./: .gitignore  README.md
annotateVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  annotateVideo  annotateVideo.cpp  build.sh  cmake_install.cmake  readme.txt
annotateVideo/.svn/: all-wcprops  entries
annotateVideo/.svn/text-base/: annotateVideo.cpp.svn-base  annotateVideo.svn-base
inputVideo/.svn/: all-wcprops  entries
outputAnnotations/: annotations.txt  annotationsFrom0.txt  annotationsFrom0To714.txt
outputAnnotations/.svn/: all-wcprops  entries
showAnnotations/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt  showAnnotations  showAnnotations.cpp
showAnnotations/.svn/: all-wcprops  entries
showAnnotations/.svn/text-base/: build.sh.svn-base  showAnnotations.cpp.svn-base  showAnnotations.svn-base
